<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>xyz.arwhite.net</groupId>
  <artifactId>split-proxy</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>SplitProxy</name>
  <description>Proxy via WebSocket tunnel(s)</description>
  
  	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<maven.compiler.source>20</maven.compiler.source>
 		<maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
 		<maven.compiler.release>${maven.compiler.source}</maven.compiler.release>
 		<junit.jupiter.version>5.8.2</junit.jupiter.version>
 		<version.plugin.compiler>3.11.0</version.plugin.compiler>
 		<version.plugin.surefire>3.0.0-M5</version.plugin.surefire>
	</properties>
    
 	<dependencies>
		<dependency>
			<groupId>io.helidon.nima.websocket</groupId>
			<artifactId>helidon-nima-websocket-webserver</artifactId>
			<version>4.0.0-ALPHA6</version>
		</dependency>
		<dependency>
    		<groupId>io.helidon.nima.websocket</groupId>
			<artifactId>helidon-nima-websocket-client</artifactId>
			<version>4.0.0-ALPHA6</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>${junit.jupiter.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
  			<groupId>org.assertj</groupId>
  			<artifactId>assertj-core</artifactId>
  			<version>3.21.0</version>
  			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.jacoco</groupId>
			<artifactId>jacoco-maven-plugin</artifactId>
 			<version>0.8.10</version>
 			<scope>test</scope>
		</dependency>
		<dependency>
    		<groupId>com.mercateo</groupId>
    		<artifactId>test-clock</artifactId>
    		<version>1.0.2</version>
    		<scope>test</scope>
		</dependency>
	</dependencies>
	
	<build>
        <finalName>${project.artifactId}</finalName>
        <plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${version.plugin.compiler}</version>
				<configuration>
					<compilerArgs>
						<compilerArg>--enable-preview</compilerArg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${version.plugin.surefire}</version>
				<configuration>
					<useModulePath>false</useModulePath>
					<argLine>--enable-preview</argLine>
					<trimStackTrace>false</trimStackTrace>
				</configuration>
			</plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.5.0</version>
                <executions>
                    <execution>
                        <id>copy-libs</id>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.0.2</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<classpathPrefix>libs</classpathPrefix>
							<useUniqueVersions>false</useUniqueVersions>
						</manifest>
					</archive>
				</configuration>
			</plugin>
        </plugins>
    </build>
    
</project>